# swarmly

./: Cargo.toml  LICENSE  README.md  compose.dev.yml  compose.prod.yml  startup.dev.sh
.github/workflows/: build.yml
docker/: Dockerfile.dev  Dockerfile.prod  dev.crt  dev.key
src/: config.rs  docker.rs  gateway.rs  main.rs  me.rs  proxy.rs  redis.rs  tls.rs
src/config/: provider.rs
src/config/provider/: docker.rs
src/config/provider/docker/: container.rs
src/proxy/: discovery.rs  gateway.rs
src/tls/: acme.rs  cert.rs  storage.rs
src/tls/acme/: challenge.rs  service.rs  url.rs
