[package]
name = "swarmly"
version = "0.1.0"
edition = "2024"

[dependencies]
acme-lib = "0.9.1"
anyhow = "1.0.98"
async-trait = "0.1.88"
bollard = "0.19.0"
http = "1.3.1"
pingora = { version = "0.5.0", features = ["openssl", "lb", "proxy"] }
tokio = { version = "1.45.0", features = ["time", "macros", "net", "rt-multi-thread", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
