[package]
name = "swarmly"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bollard = "0.19.0"
futures = "0.3.31"
http = "1.3.1"
instant-acme = "0.7.2"
pingora = { version = "0.5.0", features = ["openssl", "lb", "proxy"] }
rcgen = "0.13.2"
tokio = { version = "1.45.0", features = ["time", "macros", "net", "rt-multi-thread", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
