[package]
name = "swarmly"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
async-trait = "0.1"
bollard = "0.20"
http = "1"
instant-acme = { version = "0.8", features = ["hyper-rustls", "rcgen"] }
pingora = { version = "0.8", features = ["openssl", "lb", "proxy"] }
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["time", "macros", "net", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
